Add and modify some routes